--- a/src/main/resources/static/assets/html/board/view.html
+++ b/src/main/resources/static/assets/html/board/view.html
@@ -1,7 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<c:set var="root" value="${pageContext.request.contextPath}" />
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,37 +5,73 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>글 수정</h1>
-	<form action="${root}/board/modify" method="post">
-	<label for="memberId"> 작성자 : </label>
-	<input type="text" id="memberId" name="memberId" value="${board.memberId}" readonly/>
-	<label for="boardTitle">제목 : </label>
-	<input type="text" id="boardTitle" name="boardTitle" value="${board.boardTitle}"/>
-	<label for="boardContent">내용 : </label>
-	<textarea id="boardContent" name="boardContent" rows="7">${board.boardContent}</textarea>
-	<input type="hidden" name="boardNo" value="${board.boardNo}" />
-	<button id="commentModifyBtn">수정</button>
-	</form>
-	
+	<h1>상세 글 보기</h1>
+	<table>
+		<tr>
+			<th>글 번호</th>
+			<th>제 목</th>
+			<th>작성자</th>
+			<th>조회수</th>
+			<th>내용</th>
+			<th>작성 시간</th>
+		</tr>
+		<tr id="boardDetail">
+			
+		</tr>
+
+	</table>
+	<a href="${root}/board/list">글 목록</a>
+	<a href="${root}/board/modify/${board.boardNo}" id="modify">글 수정</a>
+	<a href="${root}/board/delete/${board.boardNo}" id="delete">글 삭제</a>
+
+	<div class="row">
+		<%-- <div>${userinfo.userId}</div> --%>
+		<div>
+			<textarea id="content" rows="5" cols="80"></textarea>
+		</div>
+		<div>
+			<button id="commentRegBtn">등록</button>
+		</div>
+	</div>
+
+	<div>
+		<ul id="commentUL">
+
+		</ul>
+	</div>
+
 	<script type="text/javascript">
-    	let commentModifyBtn = document.getElementById("commentModifyBtn");
-    	commentModifyBtn.addEventListener('click', function() {
+	
+		let html = "";
+		html += `
+			<td>${board.boardNo}</td>
+			<td>${board.boardTitle}</td>
+			<td>${board.memberId}</td>
+			<td>${board.hit}</td>
+			<td>${board.boardContent}</td>
+			<td>${board.createDate}</td>
+		`;
+		document.getElementById("boardDetail").innerHTML = html;
+		
+		
+    	let commentRegBtn = document.getElementById("commentRegBtn");
+    	commentRegBtn.addEventListener('click', function() {
 	    	let body = {
 	    		"boardNo" : "${board.boardNo}",
+	    		/* "memberId" : "${userinfo.memberId}", */
 	    		"memberId" : "1234",
-	    		"boardTitle" : document.getElementById("boardTitle").value,
-	    		"boardContent" : document.getElementById("boardContent").value
+	    		"commentContent" : document.getElementById("content").value
 	    	};
 	    	let config = {
-	          method: "PUT",
+	          method: "POST",
 	          headers: {
 	            "Content-Type": "application/json",
 	          },
 	          body: JSON.stringify(body),
 	        };
-	        fetch(`${root}/board/modify`, config)
-	          .then((response) => response.json());
-	          /* .then((data) => makeCommentList(data)); */
+	        fetch(`${root}/comment`, config)
+	          .then((response) => response.json())
+	          .then((data) => makeCommentList(data));
     	});
     
     	function makeCommentList(list) {
